syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.finance.trade.grpc";
option java_outer_classname = "TradeInfoProto";
option objc_class_prefix = "TRD";

service TradeService {
    rpc GetTradeInfo (TradeInfoQuery) returns (TradeInfoCollection) {
    }
    rpc SellProd (SellProdInfo) returns (SellProdResult) {
    }
    rpc bindBankCard (BindCardInfo) returns (BindCardResult) {
    }
}

message TradeInfoQuery {
    int64 user_id = 1;
    int64 trade_time_begin = 2;
    int64 trade_time_end = 3;
}

message TradeInfoCollection {
    repeated TradeInfo tradeInfo = 1;
}

message TradeInfo {
    int64 id = 1; //理财产品交易信息表主键',
    string trade_id = 2; //交易号',
    string bank_card_num = 3; //这次交易所用银行卡号',
    string prod_code = 4; //理财产品编码',
    sint32 trade_status = 5; //0-待确认 1-已确认 -1-交易失败',
    int64 bought_date = 6; //购买日期',
    sint32 trade_type = 7; //1-购买 2-分红 3-赎回',
    int64 quantity = 8; //数量精确到百分之一，折合正常份额要除100',
    int64 user_id = 9; //用户系统ID',
    int64 prod_id = 10; //理财产品ID',
    string fund_code = 11; //该理财产品中的基金编号',
    int64 fund_quantity = 12; //该理财产品中的基金份额',
}

message SellFundInfo {
    string fund_code = 1; //基金编号
    int64 sell_fund_quantity = 2; //基金卖出数量 精确到百分之一的整型
    int64 sell_fund_money = 3; //基金卖出金额，精确到百分之一的整型
}

message SellProdInfo {
    string user_id = 1; //用户ID
    int32 order_type = 2; //操作类型 1-购买 2-分红 3-赎回
    int64 user_prod_id = 3; //用户产品ID
    repeated SellFundInfo sellFundInfo = 4; //卖出各个基金的明细
}

message SellProdResult {
    string user_id = 1; //用户ID
    int32 order_type = 2; //操作类型 1-购买 2-分红 3-赎回
    int64 user_prod_id = 3; //用户产品ID
    repeated SellProdResultDetail sellProdResultDetail = 4; //卖出各个基金的明细
}

message SellProdResultDetail {
    string fund_code = 1; //基金编号
    int64 sell_fund_quantity = 2; //基金卖出数量 精确到百分之一的整型
    int64 sell_fund_money = 3; //基金卖出金额，精确到百分之一的整型
    int32 sell_result = 4; //1-交易成功 -1-交易失败 ... 其他交易失败编码
    string err_msg = 5; //交易失败描述
}

message BindCardInfo {
    string cardNo = 1; //银行卡号
    string bankName = 2; //开户行名称
    int64 userId = 3; //用户ID
    string idCardNo = 4; //身份证号码
    string userPhone = 5; //用户电话
    string userName = 6; //用户名
}

message BindCardResult {
    string tradeacco = 1; //交易帐号号
}