syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.tools.checkfunds";
option java_outer_classname = "FundCheckerServiceRpc";
option objc_class_prefix = "FCSR";

service FundCheckerService {
    rpc CheckFunds (DailyFundsQuery) returns (CheckResult) {
    }

}

message DailyFundsQuery {
    repeated string codes = 1;
    string nav_latest_date_start = 2;
    string nav_latest_date_end = 3;
    int32 check_table_idx = 4;
}

message CheckResult{
   int32 result = 1;
}
